Fix units in spacing values

--- a/styles/variables/_spacing.scss
+++ b/styles/variables/_spacing.scss
@@ -1,13 +1,13 @@
 @import 'typography';
 
-$spacing-unit: $line-height-base;
+$spacing-unit: 1rem * $line-height-base;
 $spacing: (
   0: 0,
-  0.5: ($spacing-unit * 0.5) + rem,
-  1: ($spacing-unit * 1) + rem,
-  2: ($spacing-unit * 2) + rem,
-  3: ($spacing-unit * 3) + rem,
-  4: ($spacing-unit * 4) + rem
+  0.5: ($spacing-unit * 0.5),
+  1: ($spacing-unit * 1),
+  2: ($spacing-unit * 2),
+  3: ($spacing-unit * 3),
+  4: ($spacing-unit * 4)
 );
 @function spacing($unit) {
   @return map-get($spacing, $unit);
